<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/padding"
    android:paddingLeft="@dimen/padding"
    android:paddingRight="@dimen/padding"
    android:paddingTop="@dimen/padding"
    tools:context="com.zybooks.pizzaparty.MainActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_gravity="center"
        android:textSize="@dimen/text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_people"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/text_size"
        android:labelFor="@id/num_attend_edit_text" />

    <EditText
        android:id="@+id/num_attend_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="5"
        android:importantForAutofill="no"
        android:hint="@string/hint_10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/how_hungry_text"
        android:textSize="@dimen/text_size"
        android:labelFor="@id/hungry_radio_group" />

    <RadioGroup
        android:id="@+id/hungry_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/light_radio_button"
            android:text="@string/light_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/medium_radio_button"
            android:text="@string/medium_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />

        <RadioButton
            android:id="@+id/ravenous_radio_button"
            android:text="@string/ravenous_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toppings_text"
        android:textSize="@dimen/text_size"
        android:labelFor="@+id/topping_edit_text" />

    <RadioGroup
        android:id="@+id/topping_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/no_topping_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="noTopping"
            android:text="@string/no_toppings_text" />

        <RadioButton
            android:id="@+id/topping_radio_button"
            android:text="@string/toppings_text"
            android:layout_width="wrap_content"
            android:onClick="wantTopping"
            android:layout_height="wrap_content"
            android:checked="false" />


    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/topping1_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"
            android:ems="5"
            android:importantForAutofill="no"
            android:visibility="invisible"
            android:layout_marginEnd="10dp"
            android:hint="@string/peperoni_hint" />

        <EditText
            android:id="@+id/topping2_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"
            android:ems="5"
            android:importantForAutofill="no"
            android:visibility="invisible"
            android:hint="@string/extra_cheese_hint" />

    </LinearLayout>

    <TextView
        android:id="@+id/total_slice_text_view"
        android:text="@string/total_slice_per_person_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/num_pizza_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_pizzas_text"
        android:textSize="@dimen/text_size" />

    <Button
        android:id="@+id/calc_button"
        android:text="@string/calculate_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="calculateClick" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="end">

        <TextView
            android:id="@+id/cost_food_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_text"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/taxes_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taxes_text"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end">

        <View
            style="@style/Divider"
            android:id="@+id/line_divider"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end">

        <TextView
            android:id="@+id/total_cost_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_text"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/save_button"
            android:text="@string/save_order_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:onClick="saveClick" />

        <Button
            android:id="@+id/checkout_button"
            android:text="@string/checkout_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="checkoutClick"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>


</LinearLayout>