<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zybooks.pizzaparty.controller.MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding"
        android:paddingTop="@dimen/padding"
        android:paddingRight="@dimen/padding"
        android:paddingBottom="@dimen/padding">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/name"
            android:textSize="@dimen/text_size"
            android:layout_columnSpan="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:labelFor="@id/num_attend_edit_text"
            android:text="@string/number_of_people"
            android:textSize="@dimen/text_size"
            android:layout_columnSpan="2" />

        <EditText
            android:id="@+id/num_attend_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/hint_10"
            android:importantForAutofill="no"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:labelFor="@id/hungry_radio_group"
            android:text="@string/how_hungry_text"
            android:textSize="@dimen/text_size"
            android:layout_columnSpan="2" />

        <RadioGroup
            android:id="@+id/hungry_radio_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_columnSpan="2">

            <RadioButton
                android:id="@+id/light_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light_text" />

            <RadioButton
                android:id="@+id/medium_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/medium_text" />

            <RadioButton
                android:id="@+id/ravenous_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ravenous_text" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/topping_edit_text"
            android:text="@string/toppings_text"
            android:textSize="@dimen/text_size"
            android:layout_columnSpan="2" />

        <RadioGroup
            android:id="@+id/topping_radio_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_columnSpan="2">

            <RadioButton
                android:id="@+id/no_topping_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="noTopping"
                android:text="@string/no_toppings_text" />

            <RadioButton
                android:id="@+id/topping_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="wantTopping"
                android:text="@string/toppings_text" />
        </RadioGroup>

        <EditText
            android:id="@+id/topping1_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:ems="5"
            android:hint="@string/peperoni_hint"
            android:importantForAutofill="no"
            android:inputType="textAutoComplete"
            android:visibility="invisible"

            />

        <EditText
            android:id="@+id/topping2_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/extra_cheese_hint"
            android:importantForAutofill="no"
            android:inputType="textAutoComplete"
            android:visibility="invisible"

            />

        <TextView
            android:id="@+id/total_slice_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/total_slice_per_person_text"
            android:textSize="@dimen/text_size"
            android:layout_columnSpan="2" />

        <TextView
            android:id="@+id/num_pizza_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_pizzas_text"
            android:textSize="@dimen/text_size"
            android:layout_columnSpan="2" />

        <Button
            android:id="@+id/calc_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="calculateClick"
            android:text="@string/calculate_text"
            android:gravity="center"
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="2" />

        <TextView
            android:id="@+id/cost_food_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_text"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:layout_gravity="end"
            android:visibility="invisible"
            tools:text="$16.00"
            android:layout_columnSpan="2" />

        <TextView
            android:id="@+id/taxes_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taxes_text"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:visibility="invisible"
            android:layout_gravity="end"
            tools:text="$16.00"
            android:layout_columnSpan="2" />

        <View
            android:id="@+id/line_divider"
            style="@style/Divider"
            android:visibility="invisible"
            android:layout_gravity="end"
            android:layout_columnSpan="2" />

        <TextView
            android:id="@+id/total_cost_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_text"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:visibility="invisible"
            android:layout_gravity="end"
            android:layout_columnSpan="2" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:onClick="saveClick"
            android:text="@string/save_order_text"
            android:layout_columnSpan="2" />

        <Button
            android:id="@+id/checkout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="checkoutClick"
            android:text="@string/checkout_text"
            tools:ignore="UsingOnClickInXml" />
    </GridLayout>


</ScrollView>